apps/qbitorrent/qbitorrent-ext-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: qbitorrent-ext
  labels:
    authentified: "true"
    type: external
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - torrent.former-hostname.com
      secretName: qbitorrent.former-hostname.com
  rules:
    - host: torrent.former-hostname.com
      http:
        paths:
          - backend:
              serviceName: qbitorrent
              servicePort: 8080
            path: /
